# inference-verification-tee

./: .gitignore  Dockerfile  api_server.py  changes.md  pyproject.toml  requirements-tee.txt  requirements.txt  tinfoil-config.yml  ui.py
.github/workflows/: build-and-push.yml  docker-build.yml  tinfoil-build.yml
inference_verification/: generate.py
inference_verification/scoring_functions/: convolved_gaussian_score.py
scripts/: extract_prompts.py
tests/: conftest.py  test_tee_external.py
