[project]
name = "inference_verification"
version = "0.0.1"
description = "Sample repository using Apollo best engineering practices"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "hydra-core",
    "pydantic",
    "wandb",
    "tqdm",
    "pytest",
    "ipykernel",
    "pandas",
    "einops",
    "jaxtyping",
    "accelerate>=1.0.1",
    "datasets>=3.1.0",
    "matplotlib>=3.9.4",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "setuptools>=75.3.2",
    "wheel>=0.45.1",
    "transformers==4.53.2",
    "torchvision==0.22.1",
    "xformers",
    "torch==2.7.1",
    "scikit-learn",
    "bitsandbytes==0.46.1",
    "huggingface-hub>=0.33.1",
    "hf-transfer>=0.1.9",
    "vllm>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inference_verification"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that call /verify (slow, requires GPU)",
]

[tool.pyright]
include = ["inference_verification", "tests"]
